# bb-deployments

./: .bazelrc  19327.sh  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  changelog.md  dowindows  filenamelength.c  go_dependencies.bzl  goma-failed-attempt.rst  goma-patch-away-authentication.rst  goma.rst  ls-proc
.github/workflows/: master.yaml
bare/config/: runner.jsonnet  worker.jsonnet
cmd/ls-proc/: BUILD.bazel  main.go
docker-compose/: docker-compose.yml  run.sh
docker-compose/config/: runner-ubuntu22-04.jsonnet  worker-fuse-ubuntu22-04.jsonnet  worker-hardlinking-ubuntu22-04.jsonnet
kubernetes/: frontend.yaml  scheduler.yaml  storage.yaml  worker-ubuntu22-04.yaml
kubernetes/config/: frontend.jsonnet
settings/: BUILD.bazel
tools/: test-deployment-combined  test-deployment-combined-2  test-deployment-minikube
tools/remote-toolchains/: BUILD.bazel
tools/remote-toolchains/windows/local_config_cc/: BUILD  WORKSPACE  builtin_include_directory_paths_mingw  builtin_include_directory_paths_msvc  windows_cc_toolchain_config.bzl
tools/remote-toolchains/windows/local_config_cc/wrapper/: cl.bat  lib.bat  link.bat  ml64.bat
tools/remote-toolchains/windows/local_config_cc_toolchains/: BUILD  WORKSPACE
tools/remote-toolchains/windows/local_config_platform/: BUILD.bazel  MODULE.bazel  WORKSPACE  constraints.bzl
tools/remote-toolchains/windows/local_config_sh/: BUILD  WORKSPACE
