load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-deployments/cmd/ls-proc",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ls-proc",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    pure = "on",
)
