"""Definition of remote execution platforms and toolchains.

The remote platform and toolchains are based on the content of
local_config_platform and local_config_cc_toolchains, when running Bazel inside
the same docker image as the remote system expects.
"""

constraint_setting(
    name = "container-image",
)

constraint_value(
    name = "ubuntu-act-22-04",
    constraint_setting = ":container-image",
)

platform(
    name = "windows-platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        # ":windows", not needed - no docker
    ],
    exec_properties = {
        "OSFamily": "windows",
    },
)

platform(
    name = "ubuntu-act-22-04-platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":ubuntu-act-22-04",
    ],
    exec_properties = {
        "container-image": "docker://ghcr.io/catthehacker/ubuntu:act-22.04@sha256:5f9c35c25db1d51a8ddaae5c0ba8d3c163c5e9a4a6cc97acd409ac7eae239448",
        "OSFamily": "linux",
    },
)
